First Commit for MML Website

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Practical Data Science - Spring 2025</title>
+  <title>Mathematics of Learning in Machine Learning - Summer 2025</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
   <style>
     html, body {
       height: 100%;
@@ -14,6 +15,7 @@
       display: flex;
       flex-direction: column;
       min-height: 100vh;
+      font-family: 'Merriweather', serif;
     }
     .hero {
       background-color: #e6f4ea;
@@ -33,126 +35,87 @@
     }
   </style>
 </head>
-<head>
-    <meta charset="UTF-8">
-    <title>Data Analytics and Visualization</title>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Merriweather', serif;
-      }
-    </style>
-  </head>
 <body>
   <!-- Top Banner -->
   <div class="bg-white py-2 border-bottom">
     <div class="container">
       <div class="row align-items-center">
-        <!-- Logo on the left -->
         <div class="col-auto">
           <img src="images/herald logo.png" alt="Herald College Logo" height="40" />
         </div>
-  
-        <!-- Centered green text with emoji -->
         <div class="col text-center text-success fw-bold" style="font-size: 1.1rem;">
-          Herald College – 📖 Education Initiative by the Center for AI. ✨ 
+          Herald College – 📖 Education Initiative by the Center for AI. ✨
         </div>
-  
-        <!-- Optional spacer -->
         <div class="col-auto d-none d-md-block"></div>
       </div>
     </div>
   </div>
+
   <section style="margin: 0; padding: 0;">
     <img src="images/cloudword.png" alt="Word Cloud" style="width: 100%; display: block;">
   </section>
-  <header class="hero" style="
-  background-color: #e6f4ea;
-  padding: 1px 1px;  /* Reduced top and bottom padding */
-  text-align: center;
-  border-radius: 0 0 20px 20px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-  margin-top: 0;
-">
-  <!-- Hero Content -->
+
+  <header class="hero" style="padding: 1px 1px;">
   <div class="container mt-3">
-    <h1 class="display-5 fw-bold">Data Analytics and Visualizations.</h1>
-    <p class="lead"><em>Unlocking Decisions through Data: Where Analytics Meets Storytelling and Statistical Insight.</em></p>
-    <p class="lead">Summer 2025</p>
-    <p class="lead">Lead Instructors: Ronit Shrestha , Shiv Kumar Yadav</p>
-    <p class="lead">Promoter: Siman Giri</p>
+    <h1 class="display-5 fw-bold" style="line-height: 1.2;">
+      Mathematics of Learning:
+      <span style="font-size: 2.0rem; display: block; margin-top: -0.3em;">Mathematical Interpretations of Machine Learning Algorithms.</span>
+    </h1>
+    <p class="lead fst-italic mt-2">
+      Because <strong><em>"JUST TRUST the MODEL"</em></strong> isn't Good Enough. </p>
+    <p class="lead">Instructor: Siman Giri.</p>
   </div>
 </header>
-<!-- Navigation inside Hero -->
-<div class="container mt-2">
+  <div class="container mt-2">
     <ul class="nav nav-tabs justify-content-center" id="courseTabs" role="tablist" style="border-bottom: 2px solid #ccc;">
       <li class="nav-item" role="presentation">
-        <a class="nav-link active" href="index.html" role="tab"
-           style="color: #2c3e50; font-weight: 500; border: none; border-bottom: 3px solid #28a745;">
-           Home
-        </a>
+        <a class="nav-link active" href="index.html" role="tab" style="color: #2c3e50; font-weight: 500; border: none; border-bottom: 3px solid #28a745;">Home</a>
       </li>
       <li class="nav-item" role="presentation">
-        <a class="nav-link active" href="aboutthecourse.html" role="tab"
-           style="color: #2c3e50; font-weight: 500; border: none; border-bottom: 3px solid #2835a7;">
-              Course Overview
-        </a>
+        <a class="nav-link" href="aboutthecourse.html" role="tab" style="color: #2c3e50; font-weight: 500; border: none; border-bottom: 3px solid #2835a7;">Course Overview</a>
       </li>
       <li class="nav-item" role="presentation">
-        <a class="nav-link" href="schedule.html" role="tab"
-           style="color: #2c3e50; font-weight: 500; border: none; border-bottom: 3px solid #a74c28; ">
-            Schedule
-        </a>
+        <a class="nav-link" href="schedule.html" role="tab" style="color: #2c3e50; font-weight: 500; border: none; border-bottom: 3px solid #a74c28;">Schedule</a>
       </li>
       <li class="nav-item" role="presentation">
-        <a class="nav-link" href="faq.html" role="tab"
-           style="color: #2c3e50; font-weight: 500; border: none; border-bottom: 3px solid #380877; ">
-           FAQ
-        </a>
+        <a class="nav-link" href="faq.html" role="tab" style="color: #2c3e50; font-weight: 500; border: none; border-bottom: 3px solid #380877;">FAQ</a>
       </li>
     </ul>
   </div>
 
   <!-- Main Content -->
   <main class="main-content container text-center mt-3">
-    <p class="mb-2"><strong> Welcome to Data Analytics and Visualization {Course Code - HCAI5DS02}.</strong></p>
-    
-    <p class="text-start mb-2">
-      This course is a component of the <strong>Practical Data Science</strong> curriculum, developed and offered by 
-      <strong>Herald College – Center for AI</strong> as part of its ongoing <em>Education Initiative</em>. 
-      It is specifically designed for <strong>Level 5 students</strong> who have recently completed or are awaiting their results.
+    <p class="mb-2"><strong>Welcome to Mathematics of Learning in Machine Learning {Course Code - HCAI5TML01}.</strong></p>
+    <p class="text-start mb-2">Machine Learning</strong> curriculum by the
+      <strong>Center for AI, Herald College</strong>. It is carefully designed for <strong>undergraduate students</strong> interested in understanding the deep mathematical ideas behind ML algorithms.
     </p>
-  
     <p class="text-start mb-2">
-      Please use the navigation above to explore detailed information about the course, including the 
-      <strong>tentative syllabus, schedule, and participation requirements</strong>.
+      Probably, you may never use this in your applied machine learning career — but these are <strong>very important arrows to have</strong> for deeper understanding of learning theory, generalization, optimization, and many advanced ideas in the future.
     </p>
-  
     <p class="text-start mb-2">
-      Admission to the course is coordinated through the Center for AI. Depending on the volume of applications, 
-      an <strong>interview process</strong> may be instituted to ensure appropriate placement and commitment.
+      Please use the navigation above to explore detailed information about the course, including the <strong>syllabus, weekly themes, resources, and expectations</strong>.
     </p>
-  
+    <p class="text-start mb-2">
+      Admission is managed by the Center for AI. Due to limited seating, <strong>selection may involve an interview</strong> to gauge motivation and preparedness.
+    </p>
     <h5 class="text-start mb-2">Audit Policy</h5>
     <p class="text-start mb-2">
-      We are currently evaluating the feasibility of allowing students to <strong>audit</strong> the course. 
-      A final decision will be made based on the total number of registration requests and will be communicated in due course.
+      The course team is evaluating whether to allow students to <strong>audit</strong> this course. This will depend on demand and seat availability. Final policy updates will be shared soon.
     </p>
   </main>
-  
-    <!-- Register Section -->
-    <section id="register" class="section mt-5">
-        <section id="register" class="section mt-5">
-            <div class="card p-4 text-center shadow-sm">
-              <h2 class="mb-3">Register for the Course</h2>
-              <p class="mb-2">Registration is <strong>not yet open</strong>.</p>
-              <p>You will be notified via email from the PAT office or College Administration once registration begins.</p>
-              <p>After registration opens, you will be able to enroll by clicking the registration button on this page or using the link that will be shared.</p>
-              <button class="btn btn-secondary btn-lg mt-2" disabled>Registration Coming Soon</button>
-            </div>
-          </section>
 
-  <!-- Footer ONLY on Home -->
+  <!-- Register Section -->
+  <section id="register" class="section mt-5">
+    <div class="card p-4 text-center shadow-sm">
+      <h2 class="mb-3">Register for the Course</h2>
+      <p class="mb-2">Registration is <strong>not yet open</strong>.</p>
+      <p>You will be notified by the PAT office or administration once registration begins.</p>
+      <p>Upon opening, registration will be available via this site or through an official email link.</p>
+      <button class="btn btn-secondary btn-lg mt-2" disabled>Registration Coming Soon</button>
+    </div>
+  </section>
+
+  <!-- Footer -->
   <footer>
     &copy; 2025 Center for AI – Herald College Kathmandu. All rights reserved.
   </footer>
