--- a/aboutthecourse.html
+++ b/aboutthecourse.html
@@ -21,13 +21,31 @@
       margin-top: 2rem;
       margin-bottom: 2rem;
     }
+    /* Title and subtitle styles */
+    .course-title {
+      font-weight: 700;
+      font-size: 2.25rem; /* roughly display-5 size */
+      line-height: 1.2;
+      margin-bottom: 0.25rem;
+      text-align: center;
+    }
+    .course-subtitle {
+      font-size: 1.25rem;
+      font-style: italic;
+      color: #555;
+      margin-bottom: 2rem;
+    }
+    .bold-italic {
+      font-weight: 700;
+      font-style: italic;
+    }
   </style>
 </head>
 
 <body>
   <!-- Top Banner -->
   <div class="bg-white py-2 border-bottom">
-    <strong>Herald College: Center for AI – Education Initiative - Data Analytics and Visualization {HCAI5DS02}</strong>
+    <strong>Herald College: Center for AI – Education Initiative - Mathematics of Learning {HCAI5TML01}</strong>
   </div>
 
   <!-- Navigation -->
@@ -55,42 +73,53 @@
       </div>
     </div>
   </nav>
-  <section style="margin: 0; padding: 0;">
-    <img src="images/aboutcourseimage.png" alt="Word Cloud" style="width: 100%; display: block;">
-  </section>
-  <!-- Main Content -->
+
+  <!-- Course Title and Subtitle -->
   <main class="container">
-<h3 class="mt-4">General Overview</h3>
-<p class="ms-5">
-  This module offers a practical introduction to data science, with a strong emphasis on statistical modeling, data visualization, and interpreting real-world data. Building upon the machine learning foundations from module 5CS037, it expands students' understanding through hands-on work with diverse datasets and applied scenarios.
-</p>
-<p class="ms-5">
-  Students will develop interdisciplinary competencies in statistical reasoning, computational programming, and effective communication. By integrating theoretical insights with practical application, the module equips students to tackle complex, data-driven problems and translate analytical findings into actionable insights.
-</p>
-<h4 class="mt-4">Learning Objectives</h4>
-<ul class="ms-3">
-  <li>📊 <strong>Statistical Analysis:</strong> Formulate hypotheses and perform statistical analysis on real-world datasets to derive actionable insights.</li>
-  <li>🔗 <strong>Regression & Causation:</strong> Understand relationships in data using correlation and regression techniques, and explore causal inference in applied settings.</li>
-  <li>🧮 <strong>Robust Linear Models:</strong> Build and evaluate linear models that are resilient to outliers and violations of standard assumptions.</li>
-  <li>📈 <strong>Time Series Forecasting:</strong> Model and forecast time series data using moving average and autoregressive models, with applications in domains like finance.</li>
-  <li>🗣️ <strong>Communication:</strong> Clearly communicate analytical results through visualizations, structured reports, and professional presentations.</li>
-</ul>
-<p class="fst-italic ms-3">
-  This module is highly practical, using real datasets to reinforce concepts and techniques through applied exercises, coding assignments, and project-based learning.
-</p>
-<!-- Difficulty Assessment Section -->
-<h4 class="mt-4">Difficulty Assessment</h4>
-<div class="ms-5">
-  <p>
-    <strong>Level:</strong> Intermediate  
-    <br>
-    <strong>Recommended Background:</strong> Basic knowledge of Python programming, statistics, and introductory machine learning concepts (such as those taught in module 5CS037).
-  </p>
-  <p>
-    This module is designed to challenge students to apply foundational concepts in new contexts, work with real datasets, and effectively communicate their insights. While it is not entry-level, it is suitable for students who are comfortable with core programming and data analysis techniques.
-  </p>
-</div>
-</main>
+    <h1 class="course-title">
+      Mathematics of Learning: Mathematical Interpretations of Machine Learning Algorithms.
+    </h1>
+    <!-- Word Cloud Image Placeholder -->
+</section>
+    <!-- General Overview -->
+    <h3 class="mt-4">General Overview</h3>
+    <p class="ms-5">
+        This course offers a mathematically rigorous introduction to the foundations of machine learning, focusing on the theoretical principles that govern learning from data. It develops a deep understanding of key concepts such as empirical risk minimization, PAC learning, VC dimension, Rademacher complexity, information-theoretic measures, and optimization techniques—all essential to analyze the performance, reliability, and limitations of modern learning algorithms.
+    <p class="ms-5 mb-1">
+        While the topics covered are not always directly applied in day-to-day machine learning practice, they form a vital intellectual foundation for anyone seeking a principled understanding of the field. These are the conceptual tools—the "arrows in your quiver"—that will enrich your ability to reason about algorithms, grasp advanced topics in learning theory, and navigate future innovations in artificial intelligence and data science.
+    <div style="margin: 500 3rem; line-height: 500;">
+      <iframe src="images/bias_variance_cover2.html" style="width: 100%; height: 450px; border: none; display: block;"></iframe>
+    </div>
+        <p class="ms-5 mt-1">
+        The course emphasizes proofs, derivations, and conceptual clarity over implementation, encouraging students to engage with the why behind learning methods, not just the how. Although rooted in advanced theory, the course has been thoughtfully designed to be accessible to undergraduate students with a strong interest in mathematics, statistics, and computer science. It builds up ideas incrementally and rigorously, making it an ideal stepping stone toward graduate-level machine learning and research.
+    </p>
+
+
+    <!-- Learning Objectives -->
+    <h4 class="mt-4">Learning Objectives</h4>
+    <ul class="ms-3">
+      <li>📐 <strong>Mathematical Foundations:</strong> Understand core mathematical principles including linear algebra, probability, and convex optimization used in machine learning.</li>
+      <li>📊 <strong>Statistical Learning Theory:</strong> Explore empirical risk minimization, PAC learning, and VC dimension to assess algorithm generalization.</li>
+      <li>🔍 <strong>Algorithm Interpretations:</strong> Analyze how optimization and regularization influence learning algorithms' performance and behavior.</li>
+      <li>💡 <strong>Information-Theoretic Insights:</strong> Apply concepts like Rademacher complexity and mutual information to evaluate model complexity and generalization.</li>
+      <li>📚 <strong> Theory in Learning:</strong> Apply concepts like entropy, KL divergence, and the Minimum Description Length principle to reason about model selection and compression.</li>
+    </ul>
+    <p class="fst-italic ms-3">
+      This course blends theoretical rigor with applied examples to cultivate a deep and intuitive mathematical grasp of machine learning.
+    </p>
+
+    <!-- Difficulty Assessment Section -->
+    <h4 class="mt-4">Difficulty Assessment</h4>
+    <div class="ms-5">
+      <p>
+        <strong>Level:</strong> Intermediate to Advanced<br />
+        <strong>Recommended Background:</strong> Familiarity with basic linear algebra, calculus, probability, and introductory machine learning concepts.
+      </p>
+      <p>
+        The course is designed to challenge students comfortable with mathematical reasoning and programming, pushing them to explore the theoretical underpinnings of learning algorithms.
+      </p>
+    </div>
+  </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
