--- a/faq.html
+++ b/faq.html
@@ -14,6 +14,7 @@
       display: flex;
       flex-direction: column;
       min-height: 100vh;
+      font-family: 'Merriweather', serif;
     }
     .nav-link.active {
       font-weight: bold;
@@ -26,215 +27,193 @@
       margin-bottom: 2rem;
     }
   </style>
-  <meta charset="UTF-8">
-  <title>Your Page Title</title>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Merriweather', serif;
-    }
-  </style>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
 
-  <!-- Top Banner -->
-  <div class="bg-white py-2 border-bottom">
-    <strong>Herald College: Center for AI – Education Initiative - Data Analytics and Visualization {HCAI5DS02}</strong>
-  </div>
-
-
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" href="#">FAQ</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="schedule.html">Schedule</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="aboutthecourse.html">Course Overview</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="faq.html">FAQ</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <!-- Main Content -->
-  <main class="container mt-5 mb-5">
-    <h3 class="mt-4 mb-3">Why Take This Course?</h3>
-<h4 class="mt-4 mb-3 text-center">Grow These Skills</h4>
-<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 ms-5">
-
-  <div class="col">
-    <div class="card shadow-sm h-100">
-      <div class="card-body d-flex align-items-center">
-        <span class="fs-3 me-3">🛠️</span>
-        <div>
-          <h6 class="card-title mb-1">Computational Tools</h6>
-          <p class="card-text small text-muted">Master software & programming essentials.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="col">
-    <div class="card shadow-sm h-100">
-      <div class="card-body d-flex align-items-center">
-        <span class="fs-3 me-3">📊</span>
-        <div>
-          <h6 class="card-title mb-1">Data Analysis</h6>
-          <p class="card-text small text-muted">Extract insights from complex datasets.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="col">
-    <div class="card shadow-sm h-100">
-      <div class="card-body d-flex align-items-center">
-        <span class="fs-3 me-3">🤖</span>
-        <div>
-          <h6 class="card-title mb-1">Data Science</h6>
-          <p class="card-text small text-muted">Learn predictive modeling & machine learning.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="col">
-    <div class="card shadow-sm h-100">
-      <div class="card-body d-flex align-items-center">
-        <span class="fs-3 me-3">🧩</span>
-        <div>
-          <h6 class="card-title mb-1">Problem Solving</h6>
-          <p class="card-text small text-muted">Develop critical thinking for complex challenges.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="col">
-    <div class="card shadow-sm h-100">
-      <div class="card-body d-flex align-items-center">
-        <span class="fs-3 me-3">🔬</span>
-        <div>
-          <h6 class="card-title mb-1">Statistical Hypothesis Testing</h6>
-          <p class="card-text small text-muted">Test assumptions with statistical rigor.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="col">
-    <div class="card shadow-sm h-100">
-      <div class="card-body d-flex align-items-center">
-        <span class="fs-3 me-3">📐</span>
-        <div>
-          <h6 class="card-title mb-1">Statistical Modeling</h6>
-          <p class="card-text small text-muted">Create mathematical representations of data.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  </div>
+<!-- Top Banner -->
+<div class="bg-white py-2 border-bottom">
+  <strong>Herald College: Center for AI – Education Initiative - Mathematics of Learning in Machine Learning {HCAI5TML01}</strong>
 </div>
-<h2 class="mb-4 text-center">Frequently Asked Questions</h2>
-    <div class="accordion" id="faqAccordion">
-      
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="faq1-heading">
-          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#faq1" aria-expanded="true">
-            Who can enroll in this course?
-          </button>
-        </h2>
-        <div id="faq1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
-          <div class="accordion-body">
-            The course is designed for Level 5 students at Herald College who have completed or are awaiting results from previous modules such as 5CS037. A foundational understanding of Python is expected.
-          </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="faq6-heading">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq6">
-            How can I register for the course?
-          </button>
-        </h2>
-        <div id="faq6" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-          <div class="accordion-body">
-            Registrations are not yet open. Once they are, you will be notified via email from the PAT office or College Administration.
-            <br><br>
-            After registration opens, you can register by clicking the <strong>“Register”</strong> button on the <a href="index.html">Home Page</a> or <a href="index.html#register">click here</a> directly.
-          </div>
-        </div>
-      </div>
 
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="faq2-heading">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2">
-            Is there an interview process?
-          </button>
-        </h2>
-        <div id="faq2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-          <div class="accordion-body">
-            Depending on the number of applications received, the Center for AI may initiate a short interview process to ensure suitable placement and commitment.
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container">
+    <a class="navbar-brand" href="#">FAQ</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="schedule.html">Schedule</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="aboutthecourse.html">Course Overview</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="faq.html">FAQ</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- Main Content -->
+<main class="container mt-5 mb-5">
+  <h3 class="mt-4 mb-3">Why Take This Course?</h3>
+  <h4 class="mt-4 mb-3 text-center">Develop These Competencies</h4>
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 ms-5">
+
+    <div class="col">
+      <div class="card shadow-sm h-100">
+        <div class="card-body d-flex align-items-center">
+          <span class="fs-3 me-3">📐</span>
+          <div>
+            <h6 class="card-title mb-1">Mathematical Foundations</h6>
+            <p class="card-text small text-muted">Deepen your understanding of the mathematics behind ML algorithms.</p>
           </div>
         </div>
       </div>
-
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="faq3-heading">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq3">
-            Will students receive credits for this course?
-          </button>
-        </h2>
-        <div id="faq3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-          <div class="accordion-body">
-            This is an enrichment course and currently does not carry academic credit. However, it complements core modules and enhances employability through practical exposure.
-          </div>
-        </div>
-      </div>
-
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="faq4-heading">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq4">
-            What tools and programming languages will be used?
-          </button>
-        </h2>
-        <div id="faq4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-          <div class="accordion-body">
-            The course primarily uses Python with libraries such as Pandas, NumPy, Seaborn, Matplotlib, Plotly, Dash, and Statsmodels. Tools may evolve based on project needs.
-          </div>
-        </div>
-      </div>
-
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="faq5-heading">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq5">
-            Is it possible to audit the course?
-          </button>
-        </h2>
-        <div id="faq5" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-          <div class="accordion-body">
-            Audit options may be available depending on space and interest. This will be finalized once all registrations are reviewed.
-          </div>
-        </div>
-      </div>
-
     </div>
 
+    <div class="col">
+      <div class="card shadow-sm h-100">
+        <div class="card-body d-flex align-items-center">
+          <span class="fs-3 me-3">🔍</span>
+          <div>
+            <h6 class="card-title mb-1">Theoretical Insight</h6>
+            <p class="card-text small text-muted">Learn about generalization, bias-variance trade-off, and VC dimension.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card shadow-sm h-100">
+        <div class="card-body d-flex align-items-center">
+          <span class="fs-3 me-3">📘</span>
+          <div>
+            <h6 class="card-title mb-1">Research Readiness</h6>
+            <p class="card-text small text-muted">Build strong foundations to read and contribute to academic research.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card shadow-sm h-100">
+        <div class="card-body d-flex align-items-center">
+          <span class="fs-3 me-3">🧠</span>
+          <div>
+            <h6 class="card-title mb-1">Analytical Thinking</h6>
+            <p class="card-text small text-muted">Strengthen logical reasoning and formal argumentation skills.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card shadow-sm h-100">
+        <div class="card-body d-flex align-items-center">
+          <span class="fs-3 me-3">🧩</span>
+          <div>
+            <h6 class="card-title mb-1">Conceptual Clarity</h6>
+            <p class="card-text small text-muted">Link optimization, probability, and information theory to ML.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card shadow-sm h-100">
+        <div class="card-body d-flex align-items-center">
+          <span class="fs-3 me-3">🗂️</span>
+          <div>
+            <h6 class="card-title mb-1">Lecture-driven Learning</h6>
+            <p class="card-text small text-muted">Engage with weekly structured theoretical and problem-solving sessions.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <h2 class="mb-4 text-center mt-5">Frequently Asked Questions</h2>
+  <div class="accordion" id="faqAccordion">
+
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="faq1-heading">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#faq1" aria-expanded="true">
+          Who can enroll in this course?
+        </button>
+      </h2>
+      <div id="faq1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          This course is intended for Level 5 and Level 6 students in Computer Science or related disciplines, with a good grasp of linear algebra, calculus, and probability.
+        </div>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="faq2-heading">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2">
+          How is the course delivered?
+        </button>
+      </h2>
+      <div id="faq2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          The course consists of weekly lectures and accompanying problem-solving sessions focused on key mathematical concepts underlying machine learning.
+        </div>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="faq3-heading">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq3">
+          Is there any programming in the course?
+        </button>
+      </h2>
+      <div id="faq3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          The primary emphasis is on mathematical foundations. However, some topics may involve numerical demonstrations or simulations, preferably in Python.
+        </div>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="faq4-heading">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq4">
+          Will I receive academic credit?
+        </button>
+      </h2>
+      <div id="faq4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          This is currently a non-credit enrichment course. However, it significantly enhances theoretical preparation for research or advanced study in machine learning.
+        </div>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="faq5-heading">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq5">
+          Can I audit the course?
+        </button>
+      </h2>
+      <div id="faq5" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          Auditing may be permitted based on availability and prior discussion with the course instructor. Priority will be given to registered students.
+        </div>
+      </div>
+    </div>
+
+  </div>
 </main>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
