Lecture 1 for week 1 added.

--- a/schedule.html
+++ b/schedule.html
@@ -94,6 +94,9 @@
         <p><strong>📖 Lecture:</strong> Introduction to the Course & Linear Algebra for Learning</p>
         <p><strong>🔍 Topics:</strong> Vectors, norms, inner products, projections, matrix operations</p>
       </div>
+      <a href="files/W01 - Lec1 - Review of Linear Algebra.pdf" class="btn btn-sm btn-outline-secondary mt-2" download>
+      <i class="bi bi-file-earmark-arrow-down"></i> Lecture - 1
+    </a>
     </td>
   </tr>
   <tr>
