added lecture 2 for week 1

--- a/schedule.html
+++ b/schedule.html
@@ -96,6 +96,8 @@
       </div>
       <a href="files/W01 - Lec1 - Review of Linear Algebra.pdf" class="btn btn-sm btn-outline-secondary mt-2" download>
       <i class="bi bi-file-earmark-arrow-down"></i> Lecture - 1
+      <a href="files/W01 - Lec2 - Review of Linear Algebra.pdf" class="btn btn-sm btn-outline-secondary mt-2" download>
+      <i class="bi bi-file-earmark-arrow-down"></i> Lecture - 2
     </a>
     </td>
   </tr>
