Added third lecture.

--- a/schedule.html
+++ b/schedule.html
@@ -98,6 +98,8 @@
       <i class="bi bi-file-earmark-arrow-down"></i> Lecture - 1
       <a href="files/W01 - Lec2 - Review of Linear Algebra.pdf" class="btn btn-sm btn-outline-secondary mt-2" download>
       <i class="bi bi-file-earmark-arrow-down"></i> Lecture - 2
+      <a href="files/W02 - Lec01 - Towards Fundamental Theorem of Linear Algebra.pdf" class="btn btn-sm btn-outline-secondary mt-2" download>
+      <i class="bi bi-file-earmark-arrow-down"></i> Lecture - 3
     </a>
     </td>
   </tr>
