--- a/schedule.html
+++ b/schedule.html
@@ -100,6 +100,8 @@
       <i class="bi bi-file-earmark-arrow-down"></i> Lecture - 2
       <a href="files/W02 - Lec01 - Towards Fundamental Theorem of Linear Algebra.pdf" class="btn btn-sm btn-outline-secondary mt-2" download>
       <i class="bi bi-file-earmark-arrow-down"></i> Lecture - 3
+      <a href="files/W02 - Lec02 - Least Squares and Fundamental Theorem of Linear Algebra.pdf" class="btn btn-sm btn-outline-secondary mt-2" download>
+      <i class="bi bi-file-earmark-arrow-down"></i> Lecture - 4
     </a>
     </td>
   </tr>
